// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feedback test cases Render check for invalid 1`] = `
<DocumentFragment>
  <span
    class="css-xjluvf"
  >
    Please provide a valid value
  </span>
</DocumentFragment>
`;

exports[`Feedback test cases Render check for valid 1`] = `
<DocumentFragment>
  <span
    class="css-116yo8b"
  >
    Looks good!
  </span>
</DocumentFragment>
`;
